name:                mud
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             GPL-3
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  exposed-modules:     Mud
                     , Networking
                     , Player
                     , World
                     , Stats
                     , Commands
                     , Parser
                     , Combat
  build-depends:       base >= 4.7 && < 5
                     , network
                     , stm
                     , bytestring
                     , mtl
                     , parsec
                     , containers
                     , lens
                     , generic-lens
                     , transformers
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , DeriveFunctor
                     , InstanceSigs
                     , GeneralizedNewtypeDeriving
                     , ScopedTypeVariables
                     , ViewPatterns
                     , TemplateHaskell
                     , DeriveGeneric
                     , DataKinds
                     , FlexibleContexts
                     , TypeApplications
                     , RankNTypes

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mud
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , DeriveFunctor
                     , InstanceSigs
                     , GeneralizedNewtypeDeriving
                     , ScopedTypeVariables
                     , ViewPatterns
                     , TemplateHaskell
                     , DeriveGeneric
                     , DataKinds
                     , FlexibleContexts
                     , TypeApplications
                     , RankNTypes
